Working on ooverlay nav content (half done)

--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,41 @@
 
 <body class="page-work page-work--1">
     <div class="overlay-nav">
-        <div class="container container--overlay">
+        <div class="container overlay-nav__container">
             <div class="overlay-nav__close-icon icon__close">
                 <div class="icon__close--center"></div>
             </div>
-            this is overaly nav
+            <div class="overlay-nav__content">
+                <div class="overlay-nav__logo">
+                    <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
+                </div>
+                <p class="overlay-nav__copywords">
+                    a UX/UI designer, who keeps learning to understand
+                </p>
+                <ul class="overlay-nav__list">
+                    <li class="overlay-nav__item">
+                        <a href="#" class="overlay-nav__link">herself</a>
+                    </li>
+                    <li class="overlay-nav__item">
+                        <a href="#" class="overlay-nav__link">design</a>
+                    </li>
+                    <li class="overlay-nav__item">
+                        <a href="#" class="overlay-nav__link">development</a>
+                    </li>
+                </ul>
+                <div class="overlay-nav__bottom">
+                    <div class="overlay-nav__cta">
+                        <a href="#" class="btn--accent">Work Inquiry</a>
+                    </div>
+                    <div class="overlay-nav__contact">
+                        <p>wonmi.design@gmail.com</p>
+                        <div class="sns-container">
+                            <span>LinkedIn</span>
+                            <span>Twitter</span>                        
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <header class="site-header site-header--standard site-header--no-bg">
@@ -533,22 +563,22 @@
                     <h2 class="project__subtitle">Explore other works</h2>
                 </header>
                 <ul class="nav-list__container">
-                    <li class="row row__border row__mtb">
+                    <li class="row row__border row__mtb--small">
                         <div class="project__meta col--m-4">
                             <h3 class="h--small">Agency</h3>
                         </div>
-                        <div class="col--m-8 col--mt-until-medium">
+                        <div class="col--m-8">
                             <ul class="nav-list">
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Shinhan 'SoL'</h4></a></li>
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Design Support</h4></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="row row__border row__mtb">
+                    <li class="row row__border row__mtb--small">
                         <div class="project__meta col--m-4">
                             <h3 class="h--small">Academy</h3>
                         </div>
-                        <div class="col--m-8 col--mt-until-medium">
+                        <div class="col--m-8">
                             <ul class="nav-list">
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum"></div> <h4 class="nav-list__title">Ma-in</h4></a></li>
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum nav-list__active"></div> <h4 class="nav-list__title">Portfolio ver.1</h4></a></li>
@@ -565,11 +595,11 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="row row__mtb">
+                    <li class="row row__mtb--small">
                         <div class="project__meta col--m-4">
                             <h3 class="h--small">Freelancing</h3>
                         </div>
-                        <div class="col--m-8 col--mt-until-medium">
+                        <div class="col--m-8">
                             <ul class="nav-list">
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Komerican3</h4></a></li>
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Dessert 129</h4></a></li>
