--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
                     <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
                 </div>
                 <p class="overlay-nav__copywords">
-                    a UX/UI designer, who keeps learning to understand
+                    a UX/UI designer, who keeps learning to <span class="overlay-nav__keyword">understand</span>
                 </p>
                 <ul class="overlay-nav__list">
                     <li class="overlay-nav__item">
