Finished Styling overlay nav

--- a/app/index.html
+++ b/app/index.html
@@ -17,12 +17,14 @@
                 <div class="icon__close--center"></div>
             </div>
             <div class="overlay-nav__content">
-                <div class="overlay-nav__logo">
-                    <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
+                <div class="overlay-nav__head">
+                    <div class="overlay-nav__logo">
+                        <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
+                    </div>
+                    <p class="overlay-nav__copywords">
+                        a UX/UI designer, who keeps learning to <span class="overlay-nav__keyword">understand</span>
+                    </p>
                 </div>
-                <p class="overlay-nav__copywords">
-                    a UX/UI designer, who keeps learning to <span class="overlay-nav__keyword">understand</span>
-                </p>
                 <ul class="overlay-nav__list">
                     <li class="overlay-nav__item">
                         <a href="#" class="overlay-nav__link">herself</a>
@@ -41,8 +43,8 @@
                     <div class="overlay-nav__contact">
                         <p>wonmi.design@gmail.com</p>
                         <div class="sns-container">
-                            <span>LinkedIn</span>
-                            <span>Twitter</span>                        
+                            <a href="#" class="sns-item">LinkedIn</a>
+                            <a href="#" class="sns-item">Twitter</a>                      
                         </div>
                     </div>
                 </div>
