Retouched styling of home and herself page

--- a/app/index.html
+++ b/app/index.html
@@ -52,11 +52,18 @@
         <div class="hero hero--subpage">
             <h1 class="hero__heading">
                 <div class="container">
-                    <p class="hero__heading--intro">MYSELF</p>
+                    <p class="hero__heading--intro">HERSELF</p>
                     <p class="hero__heading--main">Hello, I'm Wonmi Kwon.</p>
                     <p class="hero__heading--sub">Let me tell you my story.</p>
                 </div>
             </h1>
+            <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
+                <p>open resume</p>
+            </a>
+            <span class="index-scroll">
+                <span class="index-scroll__arrow"></span>
+                Scroll
+            </span>
         </div>
         <nav class="secondary-nav">
             <div class="secondary-nav-container">
@@ -74,58 +81,218 @@
             </div>
         </nav>
         <section id="myself-paths" class="anchored-section myself-section section section__myself " data-matching-link="#myself-paths-link">
-            <div class="section__container">
-                <header class="section__header">
-                    <div class="section__eyebrow">SCHOOL DAYS</div>
-                    <h2 class="section__heading">A Girl under her family's expectation</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting
-                        can
-                        explore endless ways to connect with consumers.
-                    </div>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting
-                        can
-                        explore endless ways to connect with consumers.
-                    </div>
-                </header>
-                <div class="section__side section__side--left-padding">
-                    <div class="section__side-container">
-                        <img class="img1" src="./assets/images/hero_04.jpg" alt="myself image">
-                        <img class="img2" src="./assets/images/hero_01.jpg" alt="myself image">
-                    </div>
+            <div class="path-container">
+                <div class="section__container--full">
+                    <header class="section__header">
+                        <div class="section__eyebrow">SCHOOL YEARS</div>
+                        <h2 class="section__heading">A Girl under her family's expectation</h2>
+                        <div class="section__paragraph">
+                            We work in the space where brands and technology meet. Where brands willing to create something
+                            unique and
+                            exciting
+                            can
+                            explore endless ways to connect with consumers.
+                        </div>
+                        <div class="section__paragraph">
+                            We work in the space where brands and technology meet. Where brands willing to create something
+                            unique and
+                            exciting
+                            can
+                            explore endless ways to connect with consumers.
+                        </div>
+                    </header>
                 </div>
-                <div class="section__cta">
-                    <a class="btn btn--accent" href="#">See her story</a>
+                <div class="section__img-container">
+                    <!-- <img class="section__img" src="./assets/images/hero_04.jpg" alt="myself image"> -->
+                    <img class="section__img" src="./assets/images/hero_04.jpg" alt="myself image">
+                    <img class="section__img" src="./assets/images/hero_04.jpg" alt="myself image">
+                </div>
+            </div>
+            <div class="path-container">
+                <div class="section__container--full">
+                    <header class="section__header">
+                        <div class="section__eyebrow">SCHOOL DAYS</div>
+                        <h2 class="section__heading">A Girl under her family's expectation</h2>
+                        <div class="section__paragraph">
+                            We work in the space where brands and technology meet. Where brands willing to create something
+                            unique and
+                            exciting
+                            can
+                            explore endless ways to connect with consumers.
+                        </div>
+                        <div class="section__paragraph">
+                            We work in the space where brands and technology meet. Where brands willing to create something
+                            unique and
+                            exciting
+                            can
+                            explore endless ways to connect with consumers.
+                        </div>
+                    </header>
+                </div>
+                <div class="section__img-container">
+                    <!-- <img class="section__img" src="./assets/images/hero_04.jpg" alt="myself image"> -->
+                    <img class="section__img" src="./assets/images/hero_04.jpg" alt="myself image">
+                    <img class="section__img" src="./assets/images/hero_04.jpg" alt="myself image">
                 </div>
             </div>
         </section>
         <section id="myself-skills" class="anchored-section myself-section section section__design" data-matching-link="#myself-skills-link">
-            <div class="section__container">
-                <header class="section__header">
-                    <h2 class="section__heading">Believe in Power of UX Design.</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting can explore endless ways to connect with consumers.
-                    </div>
-                    <div class="section__illust">
-                        <div class="illust__container is-in-view">
-                            <figure class="illust__circle illust__circle--left">Client's Needs</figure>
-                            <figure class="illust__circle illust__circle--center">Design Thinking</figure>
-                            <figure class="illust__circle illust__circle--right">Users' Needs</figure>
+            <!-- (1) technical skills-->
+            <div class="section__container--full ph-small">
+                <div class="section__eyebrow">TECHNICAL SKILLS</div>
+                <h2 class="section__heading">To become a T-shaped Professional</h2>
+                <div class="row row--gutters project__box bg--w">
+                    <div class="col--m-4">
+                        <div class="p-20 mini-box-container">
+                            <h3 class="p--desc mb-20">UX research & planning</h3>
+                            <ul class="bullet-list">
+                                <li class="bullet-list__item">Usability Analysis</li>
+                                <li class="bullet-list__item">Competitive research</li>
+                                <li class="bullet-list__item">UX, UI research</li>
+                                <li class="bullet-list__item">Content development</li>
+                                <li class="bullet-list__item">Information Architecture Improvement</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting can explore endless ways to connect with consumers.
+                    <div class="col--m-4">
+                        <div class="p-20 mini-box-container">
+                            <h3 class="p--desc mb-20">Website & App Design</h3>
+                            <ul class="bullet-list">
+                                <li class="bullet-list__item">Design system development</li>
+                                <li class="bullet-list__item">Visual Strategy aligning with Content</li>
+                                <li class="bullet-list__item">Focus on readability</li>
+                                <li class="bullet-list__item">Icons and illustrations</li>
+                                <!-- <li class="bullet-list__item"></li> -->
+                            </ul>
+                        </div>
                     </div>
+                    <div class="col--m-4">
+                        <div class="p-20 mini-box-container bg--w">
+                            <h3 class="p--desc mb-20">And More</h3>
+                            <ul class="bullet-list">
+                                <li class="bullet-list__item">Custom Wordpress site building</li>
+                                <li class="bullet-list__item">Print design deliverables</li>
+                                <li class="bullet-list__item">Simple video editing</li>
+                                <li class="bullet-list__item">Simple app development</li>
+                                <!-- <li class="bullet-list__item">Information Architecture Improvement</li> -->
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- (2) tool sets-->
+            <section class="section__container--full ph-small">
+                <div class="row row--gutters project__col--flip-order">
+                    <div class="col--m-6 project__col--flip-order--first">
+                        <div class="section__eyebrow">TOOL SET</div>
+                        <h2 class="section__heading">Feeling cool with tools</h2>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process
+                            included</p>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process We went through 3 iterations to decide what
+                            kind of product to develop. This process included</p>
+                    </div>
+                    <div class="col--m-6">
+                        <figure>
+                            <div class="illust-two-circles">
+                                <div class="illust-two-circles__left clip-circle">
+                                </div>
+                                <div class="illust-two-circles__right">
+                                    <img src="./assets/images/icons/icon-phone.png" class="icon-phone" alt="phone icon">
+                                </div>
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+            </section>
+            <!-- (3) also powered with -->
+            <section class="section section__container--full ph-small">
+                <header class="row project__subtitle--ac">
+                    <div class="section__eyebrow">SOFT SKILLS</div>
+                    <h2 class="section__heading">Other strengths good to have</h2>
                 </header>
+                <div class="container--centered-desc">
+                    <p class="p--desc mb-20">We wanted users to feel cared and empowered so that they can think emotions are
+                        something to be taken care of, not
+                        negative things to avoid or hide inside.</p>
+                </div>
+                <div class="row row--gutters">
+                    <ul class="col-2-by-2">
+                        <li class="numberbox">
+                            <div class="numberbox__number">1</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="numberbox">
+                            <div class="numberbox__number">2</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="numberbox">
+                            <div class="numberbox__number">3</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="numberbox">
+                            <div class="numberbox__number">4</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- (5) User Flow-->
+            <!-- <section class="section section__container--full">
+                <div class="row row--gutters project__col--flip-order">
+                    <div class="col--m-6">
+                        <header class="row">
+                            <span class="project__subtitle project__subtitle--number">05</span>
+                            <h2 class="project__subtitle">User Flow Chart</h2>
+                        </header>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process
+                            included</p>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process We went through 3 iterations to decide what
+                            kind of product to develop. This process included</p>
+                    </div>
+                    <div class="col--m-6">
+                        <div class="project__flow-chart">
+                            <a href="./assets/images/flowchart.jpg">
+                                <figure>
+                                    <img src="./assets/images/flowchart.jpg" alt="flow chart">
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
+
         </section>
         <section id="myself-goals" class="anchored-section myself-section section section--development" data-matching-link="#myself-goals-link">
             <div class="section__container">
