--- a/app/realindex.html
+++ b/app/realindex.html
@@ -52,9 +52,13 @@
             <div class="hero">
                 <h1 class="hero__heading">
                     <div class="hero__heading-container">
-                        <span class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</span>
-                        <span class="hero__heading--concept">UNDERSTAND</span>
-                        <span class="hero__heading--keywords">herself . design . development</span>
+                        <!-- <span class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</span> -->
+                        <span class="hero__heading--concept">
+                            Designer, understanding
+                        </span>
+                        <span class="hero__heading--keywords">
+                            herself, design, development, people, and more.
+                        </span>
                     </div>
                 </h1>
                 <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
@@ -89,7 +93,7 @@
                         </div>
                     </div>
                     <div class="section__cta">
-                        <a class="btn btn--accent" href="#">See her story</a>
+                        <a class="btn btn--underline" href="#">See her story</a>
                     </div>
                 </div>
             </section>
@@ -149,7 +153,7 @@
                         </div>
                     </div>
                     <div class="section__cta">
-                        <a class="btn btn--accent" href="#">See All Design Works</a>
+                        <a class="btn btn--underline" href="#">Explore All Design Works</a>
                     </div>
                 </div>
             </section>
@@ -234,7 +238,7 @@
                         </div>
                     </div>
                     <div class="section__cta">
-                        <a class="btn btn--accent" href="#">See All Dev Exercises</a>
+                        <a class="btn btn--underline" href="#">See All Dev Exercises</a>
                     </div>
             </section>
         </main>
